[package]
name = "timepipe"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rumqttc = "0.24"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
